# DocParsingBench

./: .gitignore  README.md  README_zh.md  config.example.yaml  pyproject.toml
docparsingbench/: __init__.py  cli.py  core.py  format.py  hungarian.py  labels.py  markdown_segmenter.py
docparsingbench/config/: schema.py
docparsingbench/evaluation/: dpb.py  segment_compare.py
docparsingbench/metrics/: cdm.py  teds.py  text_distance.py
docparsingbench/utils/: otsl2html.py
docparsingbench/visualize/: data_aggregator.py  leaderboard_html.py  model_naming.py  summary_chart.py  vis_result.py
scripts/: base.py  chandra_ocr.py  deepseek_ocr.py  dots_ocr.py  glm_ocr.py  glmocr.config.example.yaml  glmocr.config.yaml  hunyuan_ocr.py  mineru.py  monkey_ocr.py  paddle.py  qwen3_vl.py
tests/: test_chromedriver.py  test_cli_eval.py  test_cli_labels.py  test_data_aggregator.py  test_format.py  test_formula_fallback.py  test_labels.py  test_metrics.py  test_model_naming.py  test_segmenter.py  test_summary_chart.py
